--- a/No.1.1.html
+++ b/No.1.1.html
@@ -182,10 +182,22 @@
                   <h1 class="h1fixed"></h1>
                   <p>
                     Las aplicaciones multimedia integran diversos formatos como texto,
-                    imágenes, sonido, animaciones y video para ofrecer experiencias interactivas y enriquecedoras. A continuación, se presentan algunos tipos de aplicaciones multimedia en diferentes ámbitos. las aplicaciones multimedia desempeñan un papel crucial en diversos sectores, mejorando la comunicación, el aprendizaje y la experiencia del usuario a través de la integración de múltiples formatos y tecnologías interactivas.
+                    imágenes, sonido, animaciones y video para ofrecer experiencias interactivas 
+                    y enriquecedoras. A continuación, se presentan algunos tipos de aplicaciones
+                    multimedia en diferentes ámbitos. las aplicaciones multimedia desempeñan un 
+                    papel crucial en diversos sectores, mejorando la comunicación, el aprendizaje
+                    y la experiencia del usuario a través de la integración de múltiples formatos y tecnologías interactivas.
                     </p>                
-                  <p>Las aplicaciones multimedia han revolucionando la forma en que interactuamos con la tecnología, integrando elementos como texto, imágenes, audio, video y animaciones para mejorar la comunicación y la experiencia del usuario. Dependiendo de su propósito, estas aplicaciones se utilizan en distintos ámbitos, como la educación, los negocios, el cómputo ubicuo, la autoría y el entretenimiento. En la educación, facilitan 
-                    el aprendizaje a través de plataformas interactivas y simulaciones; en los negocios, optimizan la comunicación y el marketing digital; en el cómputo ubicuo, se integran en dispositivos inteligentes y el Internet de las Cosas; en la autoría, permiten la creación y edición de contenido digital; y en el entretenimiento, transforman la industria del cine, la música y los videojuegos. Estas aplicaciones continúan evolucionando, 
+                  <p>Las aplicaciones multimedia han revolucionando la forma en que interactuamos 
+                    con la tecnología, integrando elementos como texto, imágenes, audio, video y 
+                    animaciones para mejorar la comunicación y la experiencia del usuario. 
+                    Dependiendo de su propósito, estas aplicaciones se utilizan en distintos 
+                    ámbitos, como la educación, los negocios, el cómputo ubicuo, la autoría y el entretenimiento. En la educación, facilitan 
+                    el aprendizaje a través de plataformas interactivas y simulaciones; 
+                    en los negocios, optimizan la comunicación y el marketing digital; en 
+                    el cómputo ubicuo, se integran en dispositivos inteligentes y el Internet de las Cosas; 
+                    en la autoría, permiten la creación y edición de contenido digital; y en el entretenimiento, 
+                    transforman la industria del cine, la música y los videojuegos. Estas aplicaciones continúan evolucionando, 
                     ofreciendo nuevas posibilidades en el mundo digital.</p>
                 </li>
               </ul>
@@ -197,7 +209,6 @@
           <div class="container">
           <div class="row">
             <div class="col-lg-10 col-xl-8">
-              <h3> </h3>
               <div class="row row-30">
                 <div class="col-md-6"><img class="imagen-zoom-rotar" src="images/IMAGEN2.jpg" alt="" width="340" height="250"/>
                 </div>
