--- a/No.1.2.html
+++ b/No.1.2.html
@@ -187,21 +187,16 @@
                                 entornos simulados que pueden ser realistas o completamente fantásticos. Este ensayo explora el
                                 desarrollo de la realidad virtual, sus aplicaciones actuales, sus beneficios y desafíos, así como
                                 su impacto en la sociedad.
-                                <br>
-                                <br>
+                            </P>                               
                                 <h3> Origen y Evolución de la Realidad Virtual </h3>
-                                <br>
+                                <p>
                                 La idea de la realidad virtual no es nueva. Sus raíces se remontan a los años 60,
                                 cuando Ivan Sutherland desarrolló el primer sistema de visualización inmersiva,
                                 conocido como "La Espada de Damocles". Sin embargo, no fue hasta los años 90 que
                                 la tecnología avanzó lo suficiente para permitir experiencias más accesibles,
                                 unque todavía limitadas por su alto costo y capacidades técnicas.
-
-                            </p>
-                        </li>
-                        <li>
+                            </p>                       
                             <p>
-
                                 En la actualidad, empresas como Meta (antes Facebook), HTC, Sony y Valve han
                                 popularizado la RV con dispositivos como Oculus Rift, HTC Vive y PlayStation VR.
                                 Estos avances han sido posibles gracias a mejoras en gráficos 3D, procesamiento
@@ -226,23 +221,20 @@
                         <div class="col-md-6">
                             <br>
                             <br>
-
-                            <p>
                                 <h3> La RV ha encontrado aplicaciones en múltiples campos: </h3>
+                                                            <p>
                                 1. Entretenimiento y Videojuegos
                                 El sector más conocido es el de los videojuegos, donde la RV ofrece una
                                 inmersión sin precedentes. Juegos como Half-Life: Alyx y Beat Saber permiten
                                 a los usuarios interactuar con mundos virtuales de manera intuitiva y realista.
+                                                            </P>
+                                <p>
                                 2. Educación y Formación
                                 En el ámbito educativo, la RV permite simulaciones de laboratorios,
                                 viajes históricos o incluso prácticas médicas sin riesgos. Por ejemplo,
                                 los estudiantes de medicina pueden realizar cirugías virtuales antes
                                 de operar a pacientes reales.
-
                             </p>
-                            <br>
-                            <br>
-                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -278,29 +270,33 @@
                                 La terapia de exposición en RV se utiliza para tratar fobias,
                                 estrés postraumático y ansiedad. También se emplea en rehabilitación
                                 física, ayudando a pacientes a recuperar movilidad mediante ejercicios interactivos.
+                            </p>
+                          <P>
                                 4. Trabajo y Comunicación
                                 Con el auge del teletrabajo, plataformas como Horizon Workrooms
-                                de Meta permiten reuniones virtuales en espacios 3D, facilitando la colaboración a distancia.
-
-                                <br>
-                                <br>
-                            <p>
+                                de Meta permiten reuniones virtuales en espacios 3D, facilitando la colaboración a distancia.</P>
+                            
                                 <h3> Beneficios y Desafíos</h3>
-                                <br>
+                                <p>
                                 Ventajas
-                                <br>
+                                </p>
+                                <p>
                                 Inmersión total: Mayor conexión emocional y sensorial con el contenido.
                                 Aprendizaje experiencial: Mejor retención de información mediante la práctica virtual.
                                 Accesibilidad: Permite experiencias que serían difíciles o peligrosas en la vida real.
-                                <br>
+                            </P>
+                                <p>
                                 Desafíos
-                                <br>
+                                  </p>
+                                <p>
                                 Costo económico: Los dispositivos de alta gama siguen siendo caros.
                                 Efectos secundarios: Algunos usuarios experimentan mareos o fatiga visual (conocido como "cybersickness").
                                 Privacidad y seguridad: La recolección de datos biométricos plantea preocupaciones éticas.
-                                <br>
+                                  </p>
+                                <p>
                                 Impacto Social y Futuro de la RV
-                                <br>
+                                </p>
+                                <p>
                                 La realidad virtual está redefiniendo la interacción humana. Por un lado, puede fomentar
                                 el aislamiento si se usa en exceso, pero también puede conectar a personas en entornos virtuales compartidos.
                                 En el futuro, se espera que la RV se integre con la inteligencia artificial y el metaverso,
