--- a/No.1.2.1.html
+++ b/No.1.2.1.html
@@ -189,35 +189,32 @@
                                 la RV no solo depende de hardware y software avanzados, sino también de factores como la inmersión, la interacción y
                                 la usabilidad. Este ensayo explora las características fundamentales que definen el desarrollo de la RV, desde sus
                                 componentes técnicos hasta sus implicaciones sociales y futuras proyecciones.
-                                <br>
-                                <br>
-                            <p>
+                            </p>                      
                                 <h5>1.	Componentes Técnicos del Desarrollo de la RV</h5>
-                                <br>
+                                <p>
                                 El desarrollo de sistemas de realidad virtual requiere la integración de múltiples tecnologías.
                                 Entre las características técnicas más relevantes se encuentran:
-                                <br>
+                                </p>
+                                <p>
                                 a) Hardware Especializado
-                                <br>
+                                </p>
+                                <p>
                                 Dispositivos de visualización: Las gafas VR (como Oculus Rift, HTC Vive o PlayStation VR) utilizan pantallas de alta
                                 resolución y baja latencia para evitar el motion sickness. Sistemas de seguimiento: Sensores de movimiento
                                 (como los lighthouse de Valve) o cámaras infrarrojas permiten el rastreo preciso de la posición del usuario.
                                 Controladores hápticos: Dispositivos como los guantes VR o los mandos táctiles proporcionan
                                 retroalimentación física para una mayor inmersión.
-
                             </p>
-                        </li>
-                        <li>
                             <p>
-                                b) Software y Motores Gráficos
-                                <br>
+                                b) Software y Motores Gráficos</p>
+                                <p>
                                 Motores de renderizado 3D: Unreal Engine, Unity y CryEngine son fundamentales para crear entornos virtuales realistas.
-                                <br>
+                                </p>
+                                <p>
                                 Algoritmos de IA: La inteligencia artificial mejora la interacción con personajes virtuales y adapta los entornos según el comportamiento del usuario.
-                                <br>
+                                </p>
+                          <p>
                                 Optimización de rendimiento: Para evitar retrasos (lag), se emplean técnicas como el foveated rendering (que reduce la calidad gráfica en la periferia visual).
-
-
                             </p>
                         </li>
                     </ul>
@@ -242,32 +239,25 @@
                             <br>
                             <p><img class="imagen-zigzag" src="images/desarrollovirtual6.jpg" alt="" width="340" height="250"></p>
                         </div>
-                        <div class="col-md-6">
-                            <br>
-
-
+                        <div class="col-md-6">                          
                             <p>
                                 Otro campo de gran impacto es la industria musical, donde las aplicaciones multimedia han transformado
                                 la forma en que se produce y consume la música. Plataformas como Spotify, Apple Music y YouTube Music
                                 han facilitado el acceso a millones de canciones, eliminando la necesidad de formatos físicos. Además,
                                 herramientas de edición de audio como FL Studio, Pro Tools y GarageBand han permitido a artistas y
                                 productores crear música de alta calidad sin la necesidad de estudios de grabación tradicionales.
-                            </p>
-                            <br>
-                            <br>
-                            <p>
+                            </p>                                                  
                                 <h5> 2. Características de Inmersión e Interacción.</h5>
-                                <br>
+                                <p>
                                 La efectividad de la RV depende de su capacidad para engañar al cerebro y hacerle creer que el entorno virtual es real. Esto se logra mediante:
-
-                                a) Inmersión Sensorial
-                                <br>
-                                Visual: Pantallas de alta densidad de píxeles y alto refresh rate (90 Hz o más).
-                                <br>
-                                Auditiva: Sonido binaural y 3D para simular direccionalidad.
-                                <br>
+                                </p><p>
+                                a) Inmersión Sensorial</p>
+                                <p>
+                                Visual: Pantallas de alta densidad de píxeles y alto refresh rate (90 Hz o más).</p>
+                                <p>
+                                Auditiva: Sonido binaural y 3D para simular direccionalidad.</p>
+                                <p>
                                 Táctil: Chalecos y guantes hápticos que simulan texturas y fuerzas
-
                             </p>
                         </div>
                     </div>
@@ -300,44 +290,33 @@
                             <h1 class="h1fixed"></h1>
                             <p>
                                 b) Interacción Natural
-                                <br>
+                            </p><p>
                                 Reconocimiento de gestos: Tecnologías como hand tracking permiten interactuar sin mandos.
-                                <br>
+                                </p><p>
                                 Movimiento físico: Plataformas omnidireccionales y treadmills VR facilitan el desplazamiento en espacios reducidos.
-
-                                <br>
-                                <br>
-                            <p>
+                                </p>                                                          
                                 <h5>3. Aplicaciones y Sectores en Desarrollo</h5>
-                                <br>
-                                El avance de la RV no sería posible sin su aplicación en campos clave:
-                                <br>
-                                a) Entretenimiento y Videojuegos
-                                <br>
-                                Juegos inmersivos (Half-Life: Alyx, Resident Evil 4 VR).
-                                <br>
-                                Cines virtuales y conciertos en RV (como los de Fortnite).
-                                <br>
-                                b) Educación y Simulación
-                                <br>
-                                Entrenamiento para pilotos, médicos y soldados.
-                                <br>
-                                Excursiones virtuales a museos o sitios históricos.
-                                <br>
-                                c) Medicina y Psicología
-                                <br>
-                                Terapias de exposición para fobias y TEPT.
-                                <br>
+                                <p>
+                                El avance de la RV no sería posible sin su aplicación en campos clave:</p>
+                                <p>
+                                a) Entretenimiento y Videojuegos</p>
+                                <p>
+                                Juegos inmersivos (Half-Life: Alyx, Resident Evil 4 VR).</p>
+                                <p>
+                                Cines virtuales y conciertos en RV (como los de Fortnite).</p>
+                                <p>
+                                b) Educación y Simulación</p>
+                                <p>
+                                Entrenamiento para pilotos, médicos y soldados.</p>
+                                <p>
+                                Excursiones virtuales a museos o sitios históricos.</p>
+                                <p>
+                                c) Medicina y Psicología</p>
+                                <p>
+                                Terapias de exposición para fobias y TEPT.</p>
+                                <p>
                                 Rehabilitación motriz mediante juegos serios (serious games).
-
-
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-
-
-                            </p>
+                            </p>                        
                         </li>
                     </ul>
                 </div>
