--- a/No.1.2.4.html
+++ b/No.1.2.4.html
@@ -180,41 +180,35 @@
                         <li>
                             <h1 class="h1fixed"></h1>
                             <p>
-                                En la era digital actual, las aplicaciones virtuales han emergido como herramientas disruptivas que están redefiniendo la forma en que interactuamos con el mundo. Desde la educación hasta la medicina, pasando por el entretenimiento y los negocios, estas tecnologías - que incluyen realidad virtual (RV), realidad aumentada (RA) y entornos virtuales - están creando nuevas dimensiones de experiencia y conocimiento. Este ensayo explora exhaustivamente el panorama de las aplicaciones virtuales, analizando sus fundamentos tecnológicos, áreas de implementación, beneficios, desafíos y perspectivas futuras.
-                                <br>
-                                <br>
-                            <p>
+                                En la era digital actual, las aplicaciones virtuales han emergido como herramientas disruptivas que están redefiniendo
+                              la forma en que interactuamos con el mundo. Desde la educación hasta la medicina, pasando por el entretenimiento y los 
+                              negocios, estas tecnologías - que incluyen realidad virtual (RV), realidad aumentada (RA) y entornos virtuales - están 
+                              creando nuevas dimensiones de experiencia y conocimiento. Este ensayo explora exhaustivamente el panorama de las aplicaciones 
+                              virtuales, analizando sus fundamentos tecnológicos, áreas de implementación, beneficios, desafíos y perspectivas futuras.
+                            </p>                                                              
                                 <h4> Fundamentos Tecnológicos de las Aplicaciones Virtuales</h4>
                                 <br>
                                 <h5>Tipos de Tecnologías Virtuales</h5>
-
-                                Las aplicaciones virtuales se sustentan en tres pilares tecnológicos principales:
+                                <p>
+                                Las aplicaciones virtuales se sustentan en tres pilares tecnológicos principales:</p>
+                                <p>
+                                •	Realidad Virtual (RV): Sistemas inmersivos que crean entornos completamente digitales (ej. Oculus Rift, HTC Vive)</p>
+                                <p>
+                                •	Realidad Aumentada (RA): Superposición de elementos digitales sobre el mundo real (ej. Pokémon GO, Microsoft HoloLens)</p>
+                                <p>
+                                •	Realidad Mixta (RM): Combinación interactiva de entornos reales y virtuales (ej. Magic Leap)</p>     
                                 <br>
-                                •	Realidad Virtual (RV): Sistemas inmersivos que crean entornos completamente digitales (ej. Oculus Rift, HTC Vive)
-                                <br>
-                                •	Realidad Aumentada (RA): Superposición de elementos digitales sobre el mundo real (ej. Pokémon GO, Microsoft HoloLens)
-                                <br>
-                                •	Realidad Mixta (RM): Combinación interactiva de entornos reales y virtuales (ej. Magic Leap)
-                                <br>
-
-
-                            </p>
-                        </li>
-                        <li>
-                            <p>
                                 <h5>Componentes Esenciales</h5>
-
-                                El desarrollo de aplicaciones virtuales efectivas requiere:
-                                <br>
-                                •	Hardware especializado: Sensores, cámaras, dispositivos hápticos
-                                <br>
-                                •	Software avanzado: Motores de renderizado 3D (Unreal Engine, Unity)
-                                <br>
-                                •	Interfaces intuitivas: Sistemas de seguimiento ocular, reconocimiento de gestos
-                                <br>
-                                •	Conectividad robusta: 5G, edge computing para experiencias en tiempo real
-
-                            </p>
+                                <p>
+                                El desarrollo de aplicaciones virtuales efectivas requiere:</p>
+                                <p>
+                                •	Hardware especializado: Sensores, cámaras, dispositivos hápticos</p>
+                                <p>
+                                •	Software avanzado: Motores de renderizado 3D (Unreal Engine, Unity)</p>
+                                <p>
+                                •	Interfaces intuitivas: Sistemas de seguimiento ocular, reconocimiento de gestos</p>
+                                <p>
+                                •	Conectividad robusta: 5G, edge computing para experiencias en tiempo real</p>                          
                         </li>
                     </ul>
                 </div>
@@ -238,41 +232,28 @@
                             <br>
                             <p><img class="imagen-zigzag" src="images/aplicacionvirtual4.jpg" alt="" width="340" height="250"></p>
                         </div>
-                        <div class="col-md-6">
-                            <br>
-                            <br>
-
-                            <p>
+                        <div class="col-md-6">                            
+                            
                                 <h5>Ámbitos de Aplicación</h5>
 
                                 <h5>Educación y Formación </h5>
+                                <p>
+                                Revolución en los métodos de aprendizaje:</p>
+                                <p>
+                                •	Simulaciones históricas inmersivas</p>
+                                <p>
+                                •	Laboratorios virtuales para prácticas científicas</p>
+                                <p>
+                                •	Entrenamiento profesional en entornos de riesgo controlado (bomberos, cirujanos)</p>
                                 <br>
-                                Revolución en los métodos de aprendizaje:
-                                <br>
-                                •	Simulaciones históricas inmersivas
-                                <br>
-                                •	Laboratorios virtuales para prácticas científicas
-                                <br>
-                                •	Entrenamiento profesional en entornos de riesgo controlado (bomberos, cirujanos)
-
-                            </p>
-                            <br>
-                            <br>
-                            <p>
-                                <h5>Sector Salud</h5>
-                                <br>
+                                <h5>Sector Salud</h5>                                
                                 <h5>Aplicaciones transformadoras:</h5>
-
-                                •	Terapias de exposición para trastornos psicológicos
-                                <br>
-                                •	Rehabilitación motriz mediante juegos serios
-                                <br>
-                                •	Visualización 3D de anatomía para planificación quirúrgica
-
-
-
-
-                            </p>
+                          <p>
+                                •	Terapias de exposición para trastornos psicológicos.</p>
+                                <p>
+                                •	Rehabilitación motriz mediante juegos serios.</p>
+                                <p>
+                                •	Visualización 3D de anatomía para planificación quirúrgica</p>                            
                         </div>
                     </div>
                 </div>
@@ -302,57 +283,38 @@
 
                     <ul class="list-xl">
                         <li>
-                            <h1 class="h1fixed"></h1>
-                            <p>
+                            <h1 class="h1fixed"></h1>                            
                                 <h5>Entretenimiento y Medios </h5>
-
-                                Nuevos paradigmas de consumo:
-                                <br>
-                                •	Cine interactivo con narrativas no lineales
-                                <br>
-                                •	Conciertos y eventos masivos virtuales (ej. Travis Scott en Fortnite)
-                                <br>
-                                •	Museos y exposiciones digitales con acceso global
-
-
-                                <br>
-                                <br>
-                            <p>
+                               <p>  
+                                Nuevos paradigmas de consumo:</p> 
+                                <p>
+                                •	Cine interactivo con narrativas no lineales</p> 
+                                <p>
+                                •	Conciertos y eventos masivos virtuales (ej. Travis Scott en Fortnite)</p> 
+                                <p>
+                                •	Museos y exposiciones digitales con acceso global</p> 
                                 <h4>3. Sets Virtuales: El Futuro de la Producción Audiovisual </h4>
                                 <br>
                                 <h5>a) ¿Qué es un Set Virtual?</h5>
                                 Un set virtual es un entorno digital donde se graban películas, series o transmisiones en vivo, eliminando la necesidad de escenografías físicas. Ejemplos:
-                                <br>
-                                The Mandalorian (Disney+): Usa StageCraft de Industrial Light & Magic (ILM) con pantallas LED gigantes.
-                                <br>
-                                Noticieros y Streamers: Presentadores usan fondos virtuales con green screen o RV.
-                                <br>
+                                <p>
+                                The Mandalorian (Disney+): Usa StageCraft de Industrial Light & Magic (ILM) con pantallas LED gigantes.</p> 
+                                <p>
+                                Noticieros y Streamers: Presentadores usan fondos virtuales con green screen o RV.</p> 
                                 <br>
                                 <h5> b) Ventajas sobre los Sets Tradicionales</h5>
-
-                                Ahorro de costos: No se requieren construcciones físicas ni locaciones.
-                                <br>
-                                Flexibilidad: Cambios de escenario en tiempo real con ajustes digitales.
-                                <br>
-                                Posproducción acelerada: Efectos visuales integrados directamente durante la grabación.
-                                <br>
+                                <p> 
+                                Ahorro de costos: No se requieren construcciones físicas ni locaciones.</p> 
+                                <p>
+                                Flexibilidad: Cambios de escenario en tiempo real con ajustes digitales.</p> 
+                                <p>
+                                Posproducción acelerada: Efectos visuales integrados directamente durante la grabación.</p>                              
                                 <br>
                                 <h5>c) Retos Técnicos</h5>
-
-                                Sincronización: La cámara debe moverse en concordancia con el entorno virtual para evitar inconsistencias.
-                                <br>
-                                Iluminación realista: La luz digital debe coincidir con la de los actores reales.
-                                <br>
-
-
-
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-
-
-                            </p>
+                                <p>   
+                                Sincronización: La cámara debe moverse en concordancia con el entorno virtual para evitar inconsistencias.</p> 
+                                <p>
+                                Iluminación realista: La luz digital debe coincidir con la de los actores reales.</p>         
                         </li>
                     </ul>
                 </div>
