--- a/No.1.3.1.html
+++ b/No.1.3.1.html
@@ -180,12 +180,10 @@
                     Las aplicaciones multimedia en la educación han revolucionado la forma en que se imparte y se recibe el conocimiento. Algunos ejemplos incluyen:
 Plataformas de aprendizaje en línea: Como Coursera, Khan Academy y Udemy, que ofrecen cursos interactivos con videos, quizzes y foros de discusión.
 Software educativo: Programas como Duolingo para aprender idiomas o GeoGebra para matemáticas.
-Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios interactivos para facilitar el aprendizaje.
-
-                  <p>
-                </li>
-                <li> 
-                  <p>En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo. Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo. 
+Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios interactivos para facilitar el aprendizaje.</p>
+                  <p>En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo. 
+                    Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido 
+                    interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo. 
                 <p>
                 </li>
               </ul>
@@ -205,7 +203,9 @@ Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios
                             </div>
                             <div class="col-md-6">
                                 <p>
-                                    En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo. Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo.
+                                    En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo.
+                                  Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido 
+                                  interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo.
                                 </p>
                             </div>
                         </div>
