--- a/No.1.4.2.html
+++ b/No.1.4.2.html
@@ -323,7 +323,6 @@ El proceso técnico de la RA sigue una secuencia crítica:
           </div>
         </div>
   
-        <section class="section section-lg bg-default">
             <div class="container">
                 <div class="row row-50 flex-lg-row-reverse">
                     <div class="col-xl-4">
@@ -374,10 +373,6 @@ El proceso técnico de la RA sigue una secuencia crítica:
                                     <br>
                                     •	Redefinición del espacio público: Capas de información geolocalizada
                                     <br>
-
-
-
-
                                 <p>
                                     <h4>5. Consideraciones Éticas y Sociales </h4>
                                     <br>
@@ -403,10 +398,7 @@ El proceso técnico de la RA sigue una secuencia crítica:
                                     <br>
                                     •	Alteración de percepciones compartidas
                                     <br>
-                                    •	Necesidad de estándares éticos
-
-
-
+                                    •	Necesidad de estándares éticos.
                                 </p>
                        
                             </li>
