--- a/No.1.5.html
+++ b/No.1.5.html
@@ -221,11 +221,8 @@
                                 Gobierno Digital	Blockchain, plataformas cloud	Trámites en línea, participación ciudadana
                                 <br>
                                 Seguridad Urbana	Reconocimiento facial, drones	Monitoreo predictivo de delitos
-
-
                             </p>
-                        </li>
-                        <li>
+                     
                             <p>
                                 <h4>2. Beneficios y Oportunidades </h4>
                                 <br>
@@ -311,13 +308,10 @@
                                 •	Infraestructura para Juegos Olímpicos inteligentes
                                 <br>
                                 •	Red de energía resiliente con microrredes locales
-
-
                             </p>
-                            <br>
-                            <br>
+
                             <p>
-                                <h4>S4. Desafíos y Riesgos </h4>
+                                <h4>4. Desafíos y Riesgos </h4>
                                 <br>
                                 <h5>4.1 Barreras Técnicas </h5>
 
