--- a/No.1.5.1.html
+++ b/No.1.5.1.html
@@ -179,8 +179,13 @@
                             <h1 class="h1fixed"></h1>
                             <p>
                                 <br>
-                                El desarrollo de las ciudades digitales ha emergido como respuesta a los complejos desafíos que enfrentan las urbes modernas: crecimiento poblacional acelerado, demanda de servicios públicos eficientes, problemas ambientales y la necesidad de mejorar la calidad de vida de los ciudadanos. Este fenómeno urbano-tecnológico representa una convergencia sin precedentes entre innovación digital y planeación urbana. La presente investigación explica el proceso de desarrollo de las ciudades digitales, examinando sus etapas evolutivas, modelos de implementación, actores clave, desafíos técnicos y sociales, así como su impacto en la reconfiguración del espacio urbano contemporáneo.
-                                <br>
+                                El desarrollo de las ciudades digitales ha emergido como respuesta a los complejos desafíos
+                              que enfrentan las urbes modernas: crecimiento poblacional acelerado, demanda de servicios públicos
+                              eficientes, problemas ambientales y la necesidad de mejorar la calidad de vida de los ciudadanos.
+                              Este fenómeno urbano-tecnológico representa una convergencia sin precedentes entre innovación 
+                              digital y planeación urbana. La presente investigación explica el proceso de desarrollo de las
+                              ciudades digitales, examinando sus etapas evolutivas, modelos de implementación, actores clave,
+                              desafíos técnicos y sociales, así como su impacto en la reconfiguración del espacio urbano contemporáneo.
                                 <h4>1. Evolución Histórica del Concepto </h4>
                                 <br>
                                 <h5>1.1 Etapas de Desarrollo </h5>
