--- a/No.1.5.2.html
+++ b/No.1.5.2.html
@@ -153,7 +153,7 @@
               
       </header>
 <br><br>
-      <div class="contianer"><h3> 1.5.2 Uso y aplicaciones de la multimediaen las cuidades digitales.</h3></div>
+      <div class="container"><h3> 1.5.2 Uso y aplicaciones de la multimediaen las cuidades digitales.</h3></div>
        <!-- Base de imagenes lateral derecha -->
         <div class="container">
           <div class="row row-50 flex-lg-row-reverse">
